[metadata]
name = ghreplicator
summary = GitHub replicator
description-file =
    README.rst
author = OpenStack Infrastructure Team
author-email = openstack-infra@lists.openstack.org
home-page = https://git.openstack.org/cgit/openstack-infra/ghreplicator
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[entry_points]
console_scripts =
    ghreplicator = ghreplicator.server:main
